--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ django-filter>=23.0,<24.0
 graphql-core>=3.2.0,<4.0.0
 graphql-relay>=3.2.0,<4.0.0
 django-crontab>=0.7.1,<1.0.0
+gql[all]>=3.4.0,<4.0.0
+requests>=2.31.0,<3.0.0
